--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,6 @@ header {
     background: linear-gradient(to right, #3498db, #8e44ad);
     text-align: center;
     padding: 30px 0;
-    margin-bottom: 20px; 
 }
 
 /* Styles h1 text on heading */
@@ -23,12 +22,14 @@ h1.heading {
 /* makes the main content of the page a flexbox*/
 main {
     display: flex;
+    padding: 15px;
+    background-color: #fff;
 }
 
 /* Sizes the left side bar that holds the search info*/
 .sidebar {
     width: 30%;
-    background-color: #fff;
+    
     padding: 20px;
 }
 
@@ -36,7 +37,7 @@ main {
 h2 {
     font-size: 22px;
     font-weight: bold;
-    padding: 5px;
+    padding: 5px 0;
 }
 
 /* Styles city search text field */
@@ -67,4 +68,55 @@ hr {
     border: 1px solid #ccc;
 }
 
+/* Styles the box that holds the display information for selected city */
+.weather-box {
+    flex: 1;
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid #ccc;
+}
+
+/* Styles the box that holds the text fields for current info */
+.weather-details {
+    margin-top: 20px;
+}
+
+/* Styles the textboxs the display current info */
+.weather-details p{
+    padding: 3px 0;
+}
+
+/* Lowers the 5 day forcast from the rest of weather box content */
+.weather-box h2:nth-child(3){
+    padding-top: 65px;
+}
+
+/* Creates a flex box to display the 5 day forcast */
+.forecast {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+/* Styling for the 5 day forcast boxes */
+.forecast-box {
+    width: 18%;
+    text-align: center;
+    border: 1px solid #ccc;
+    padding: 10px;
+    background-color: #ccc;
+}
+
+/* Styling for search history boxes */
+#searchHistory li{
+    font-size: 15px;
+    width: 100%;
+    padding: 15px;
+    margin: 5px;
+    background-color: #ccc;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+}
 
