--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
+    background-color: #fff;
 }
 
 /* Sets the gradient on header and centers text*/
@@ -78,7 +78,10 @@ hr {
 /* Styles the box that holds the display information for selected city */
 .weather-box {
     flex: 1;
-    background-color: #fff;
+    padding: 20px;
+}
+
+.current-weather {
     padding: 20px;
     border: 1px solid #ccc;
 }
@@ -94,7 +97,7 @@ hr {
 }
 
 /* Lowers the 5 day forcast from the rest of weather box content */
-.weather-box h2:nth-child(3){
+.weather-box h2:nth-child(2){
     padding-top: 65px;
 }
 
@@ -111,7 +114,7 @@ hr {
     text-align: center;
     border: 1px solid #ccc;
     padding: 10px;
-    background-color: #ccc;
+    background: #3498db;
 }
 
 /* Styling for text in forcast box */
@@ -131,4 +134,3 @@ hr {
     cursor: pointer;
     text-align: center;
 }
-
